Put image select options into groups and add styling to fix issue with images stretching on mobile phones

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@
   width: 100%;
 }
 
+.image {
+  object-fit: contain;
+}
+
 .sliders-container {
   display: flex;
   font-size: calc(10px + 1vmin);
